# algo-stats

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  init.sql  openapi.yaml  resp.json  swagger.Dockerfile
src/: controller.rs  domain.rs  infra.rs  main.rs
src/controller/: get_rate_handler.rs  get_users_handler.rs
src/domain/: ac_account_updater.rs  detail_updater.rs  dto.rs  entity.rs  persist_repository.rs  traq_repository.rs
src/infra/: ac_account_updater.rs  detail_updater.rs  persist_repository.rs  traq_repository.rs
src/usecase/: updater.rs
